Fixes on thumbnail view mode for images that are too small to be cropped.

--- a/src/assets/scss/_view-mode-grid.scss
+++ b/src/assets/scss/_view-mode-grid.scss
@@ -21,8 +21,17 @@
         display: block;
         text-decoration: none !important;
 
+        .thumbnail-container {
+            margin: 0;
+            padding: 0;
+            background-color: #f6f6f6;
+            height: 255px;
+        }
+
         img {
-            width: 255px;
+            max-width: 255px;
+            max-height: 255px;
+            width: auto;
             height: auto;
             border-radius: 0px;
         }
